Style(Header.tsx): fix the size of the main picture that was too small

--- a/frontend/src/component/tree/template/header/style.css
+++ b/frontend/src/component/tree/template/header/style.css
@@ -19,18 +19,13 @@
 	text-transform: uppercase;
 	letter-spacing: 2px;
 }
-.header_image_background img:first-child() {
+.header_image_background img {
 	height: 100%;
 	width: 100%;
 	z-index: -10;
 }
 
-.header_image_background img:nth-child(2) {
-	width: 40vw;
-	height: 12vh;
-	z-index: -10;
-	top: 4rem;
-}
+
 
 .header_description {
 	padding-top: 3rem;
